mutation/petclinic_mutations_1647330283.275425/spring-petclinic_v6/major_output_WelcomeController.txt
warning: /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/Object.class): major version 52 is newer than 51, the highest major version supported by this compiler.
  It is recommended that the compiler be upgraded.
/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/Object.class): warning: Cannot find annotation method 'value()' in type 'Profile+Annotation': class file for jdk.Profile+Annotation not found
warning: /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/String.class): major version 52 is newer than 51, the highest major version supported by this compiler.
  It is recommended that the compiler be upgraded.
/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/String.class): warning: Cannot find annotation method 'value()' in type 'Profile+Annotation'
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/system/WelcomeController.java:19: error: package org.springframework.stereotype does not exist
import org.springframework.stereotype.Controller;
                                     ^
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/system/WelcomeController.java:20: error: package org.springframework.web.bind.annotation does not exist
import org.springframework.web.bind.annotation.GetMapping;
                                              ^
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/system/WelcomeController.java:22: error: cannot find symbol
@Controller
 ^
  symbol: class Controller
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/system/WelcomeController.java:25: error: cannot find symbol
	@GetMapping("/")
	 ^
  symbol:   class GetMapping
  location: class WelcomeController
warning: /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/AutoCloseable.class): major version 52 is newer than 51, the highest major version supported by this compiler.
  It is recommended that the compiler be upgraded.
/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/AutoCloseable.class): warning: Cannot find annotation method 'value()' in type 'Profile+Annotation'
#Generated Mutants: 0 (8 ms)
4 errors
6 warnings
